--- a/src/main/res/layout/trs_sequence_page.xml
+++ b/src/main/res/layout/trs_sequence_page.xml
@@ -172,7 +172,42 @@
                     android:layout_weight="1"
                     android:textSize="18dp"
                     android:onClick="generateSequenceCommand"
-                     />
+                    />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/lLayout3a"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/main_screen_sidemargin"
+                android:layout_marginRight="@dimen/main_screen_sidemargin"
+                android:layout_below="@+id/lLayout3"
+                android:layout_marginTop="30dp"
+                android:baselineAligned="false"
+                android:orientation="horizontal"
+
+                >
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:id="@+id/infoboxx"
+                    android:text="Press 1x for 5 seconds\n2x for 10 seconds etc."
+                    android:layout_weight="3"
+                    android:visibility="invisible"
+
+                    />
+                <Button
+                    android:layout_width="@dimen/button_text_size"
+                    android:layout_height="wrap_content"
+                    android:text="reset"
+                    android:layout_weight="1"
+                    android:textSize="18dp"
+                    android:onClick="resetSequenceCommand"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    />
 
 
             </LinearLayout>
