--- a/src/main/res/layout/trs_sequence_page.xml
+++ b/src/main/res/layout/trs_sequence_page.xml
@@ -152,7 +152,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="10dp"
-            android:gravity="bottom">
+            android:gravity="bottom"
+            android:visibility="gone">
 
             <TextView
                 android:layout_width="match_parent"
