--- a/src/main/res/layout/sequence_page_layout.xml
+++ b/src/main/res/layout/sequence_page_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    tools:context="com.kiand.LED2match.SequenceProgramming"
+    tools:context="com.morris.LEDbar_controller.SequenceProgramming"
     android:padding="5dp">
 
     <LinearLayout
